Fixed z-index madness

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 .logo {
     margin: 0 auto;
     display: block;
-    z-index: 10;
+    z-index: 1; position:relative;
     height: 300px;
 }
 
@@ -23,11 +23,11 @@ body {
 
 
 .barberpole-shadow {
-    z-index: 3;
+    z-index: 0;
     height: 100%;
     width: 100%;
     margin: 0 3px;
-    position: absolute;
+    position:absolute;
     top: 0;
     left: 0;
     background: -moz-linear-gradient(left,  rgba(124,0,0,0.3) 0%, rgba(125,93,116,0) 50%, rgba(125,185,232,0) 100%); /* FF3.6+ */
@@ -41,7 +41,7 @@ body {
 
 
 .barberpole-glow {
-    z-index: 3;
+    z-index: 0;
     height: 100%;
     width: 100%;
     margin: 0 3px;
@@ -59,7 +59,7 @@ body {
 
 
 .stripes {
-    z-index: 2;
+    z-index: 0;
     position: relative;
     background-size: 60px 60px;
     background-image: linear-gradient(
